--- a/movies/shrek.html
+++ b/movies/shrek.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Shrek</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="bloxDexStyle.css">
+    <link rel='icon' href="https://i.ibb.co/DYWMfgQ/Untitled-2.png">
+<style>
+html {overflow: auto;}
+html, body, div, iframe {margin: 0px; padding: 0px; height: 100%; border: none;}
+iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x: hidden;}
+</style>
+</head>
+<body class="color">
+<iframe src="https://drive.google.com/file/d/1Oh95lhvv5PUdBXO6zBRxs9o5wuQQdXQw/preview" style="border:0px #ffffff none;" name="myiFrame" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+<br>
+<center>
+        <button onclick="window.open ('/movies.html', '_self');" class="button button1">back</button>
+</center>
+<br>
+</html>
+</body>
+</html>
