--- a/movies/megamind.html
+++ b/movies/megamind.html
@@ -14,7 +14,7 @@ iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x:
 <iframe src="https://drive.google.com/file/d/1B04UaUyL4uif5hbPrGjDMT_97TgtHDk0/preview" style="border:0px #ffffff none;" name="myiFrame" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 <br>
 <center>
-        <button onclick="window.open ('/movies.html', '_self');" class="button button1">back</button>
+        <button onclick="window.open ('/index.html', '_self');" class="button button1">back</button>
 </center>
 <br>
 </body>
