--- a/games/wolfenstein-3D/index.html
+++ b/games/wolfenstein-3D/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="max-age=0" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="cache-control" content="no-store" />
-    <meta name="viewport" content="width=640, height=400, user-scalable=no">
+    <meta name="viewport" content="width=100%, height=100%, user-scalable=no">
     <link rel="shortcut icon" href="favicon.png" />
 	<title>X to Shoot! - Wolfenstein 3D - Chili Bowl Games</title>
     <link rel="stylesheet" href="styles.css">
