--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <header>
          <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            "more new games" - Brett Chase
+            "more to come very soon" - Brett Chase
          </div>
          <h1>
             <div class ="title">
