--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Side Navigation Bar</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+	<script src="https://kit.fontawesome.com/f4c5c3ffd2.js"></script>
 </head>
 <body>
 
@@ -12,13 +12,9 @@
     <div class="sidebar">
         <h2>Jet Yehs</h2>
         <ul>
-            <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
-            <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
-            <li><a href="#"><i class="fas fa-project-diagram"></i>portfolio</a></li>
-            <li><a href="#"><i class="fas fa-blog"></i>Blogs</a></li>
-            <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
-            <li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
+            <a href="#"><li><i class="fa-solid fa-up-long"></i> Top</li></a>
+            <a href="#"><li><i class="fa-solid fa-bug"></i> Report Bug</li></a>
+            <a href="#"><li><i class="fa-solid fa-ghost"></i> Request Game</li></a>
         </ul> 
         <div class="social_media">
         <center>
@@ -30,7 +26,7 @@
       <div class="alert">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
         "more to come very soon" - Brett Chase
-     </div>
+      </div>
         <div class="info">
         <br>
         <br>
