--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,36 @@
         "more to come very soon" - Brett Chase
     </div>
     <div class="info">
+      <header>
+        <h1>
+           <div class ="title">
+              Jet Yeh's Unblocked Games
+           </div>
+        </h1>
+           <div class=left-col>
+              <img src="https://i.ibb.co/4s2gL7v/fat-man-cartoon-illustration-FW3-DNH-jpg-png.png"
+                 width="120px">
+           </div>
+           <div class=right-col>
+              <img src="https://i.ibb.co/DCvv9Gz/play-button.png" id="icon">
+           </div>
+           <audio id="mySong">
+              <source src="https://codehs.com/uploads/878bb3c793193718a2c071f08521161b" type="audio/ogg">
+           </audio>
+           <script>
+              var mySong = document.getElementById("mySong");
+              var icon = document.getElementById("icon");
+              icon.onclick = function() {
+                  if(mySong.paused) {
+                      mySong.play();
+                      icon.src = "https://i.ibb.co/2kbtwrG/pause.png"
+                  }else{
+                      mySong.pause();
+                          icon.src = "https://i.ibb.co/DCvv9Gz/play-button.png"
+                  }
+              }
+           </script>
+     </header>
         <br>
         <br>
         <br>
