--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
          </div>
          <h1>
             <div class ="title">
-               Jet Yeh's Unblocked Games
+               Mr Pugh's Unblocked Games
             </div>
             <div class=left-col>
                <img src="https://i.ibb.co/4s2gL7v/fat-man-cartoon-illustration-FW3-DNH-jpg-png.png"
