--- a/games/flash-games/index.html
+++ b/games/flash-games/index.html
@@ -4,16 +4,19 @@
 
 <head>
 	 <title>
-   Chili Bowl Games Secret Ruffle Stash 
+   Jet Yeh's Games Secret Ruffle Stash 
   </title>
-
+<style>
+	body {
+		color:red;
+	</style>
 </head>
 
   <body>
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
-    <p>Welcome to Chili Bowl Stash! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML gam3s. Along with providing new website makers embedable g4mes!</p>
+    <p>Welcome to Jet Yeh's Stash</p>
     <p>Everything <i>should</i> work. If somethings goes wrong please report an error at the <a href="https://github.com/CBGamesdev/chiliblox">Github.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
