--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,7 @@
   <div class="main_content">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-        "Help Russia fight against the neo-nazi jews in Ukraine." - Brett Chase
+        "welcome to Jet Yehs" - Brett Chase
     </div>
     <div class="info">
       <header>
@@ -67,17 +67,22 @@
       <div class="search-bar" style="margin-top: -25px">
         <input type="text" name="search" value="" autocomplete="off" id="myinput" onkeyup="searchFunction()" placeholder="Search">
         <br>
-        <br>
      </div>
-      <li class="nav"><a href="/request.html">Request Game</a></li>
-      <li class="nav"><a href="/report.html">Report Bug</a></li>
-      <li class="nav"><a href="/movies.html">Movies</a></li>
+      <li class="nav"><a href="#">All</a></li>
+      <li class="nav"><a href="#">New</a></li>
+      <li class="nav"><a href="#">2 Player</a></li>
+      <li class="nav"><a href="#">Driving</a></li>
+      <li class="nav"><a href="#">Sports</a></li>
+      <li class="nav"><a href="#">Nintendo</a></li>
+      <li class="nav"><a href="#">Eddynardo</a></li>
+      <li class="nav"><a href="#">Bloons</a></li>
     </ul>
   </div>
 <div id="progress">
   <span id="progress-value"></span>
 </div>
 </div>
+
 <script type="text/javascript" src="particles.js"></script>
 <script type="text/javascript" src="app.js"></script>
 <script>
