--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,9 @@
       <a href="#"><li><i class="fa-solid fa-bug"></i> Report Bug</li></a>
       <a href="#"><li><i class="fa-solid fa-ghost"></i> Request Game</li></a>
       <a href="https://classroom.google.com/h"><li><i class="fa-solid fa-chalkboard"></i> Google Classroom</li></a>
+      <div class=left-col>
+        <img src="https://i.ibb.co/4s2gL7v/fat-man-cartoon-illustration-FW3-DNH-jpg-png.png" width="140px">
+     </div>
     </ul> 
     <div class="social_media">
     <center>
@@ -35,10 +38,6 @@
               Jet Yeh's Unblocked Games
            </div>
         </h1>
-           <div class=left-col>
-              <img src="https://i.ibb.co/4s2gL7v/fat-man-cartoon-illustration-FW3-DNH-jpg-png.png"
-                 width="120px">
-           </div>
            <div class=right-col>
               <img src="https://i.ibb.co/DCvv9Gz/play-button.png" id="icon">
            </div>
@@ -59,8 +58,6 @@
               }
            </script>
      </header>
-     <br>
-     <br>
      <br>
     </div>
      <ul id="navbar">
