--- a/games/index.html
+++ b/games/index.html
@@ -35,20 +35,20 @@
       <a class="game" href="push-your-luck.html">Push Your Luck</a><br>
       <a class="game" href="retro-bowl.html">Retro Bowl</a><br>
       <a class="game" href="rooftop-snipers.html">Rooftop Snipers</a><br>
-      <a class="game" href="run-3.html"></a><br>
-      <a class="game" href="sand-game.html"></a><br>
-      <a class="game" href="slope.html"></a><br>
-      <a class="game" href="stack-bump-3d.html"></a><br>
-      <a class="game" href="tank-trouble-2.html"></a><br>
-      <a class="game" href="temple-run-2.html"></a><br>
-      <a class="game" href="there-is-no-game.html"></a><br>
-      <a class="game" href="townscaper.html"></a><br>
-      <a class="game" href="tunnel-rush.html"></a><br>
-      <a class="game" href="vex3.html"></a><br>
-      <a class="game" href="vex4.html"></a><br>
-      <a class="game" href="vex5.html"></a><br>
-      <a class="game" href="webgl-rollingsky.html"></a><br>
-      <a class="game" href="wolfenstein-3D.html"></a><br>
+      <a class="game" href="run-3.html">Run 3</a><br>
+      <a class="game" href="sand-game.html">Sand Game</a><br>
+      <a class="game" href="slope.html">Slope</a><br>
+      <a class="game" href="stack-bump-3d.html">Stack Bump 3D</a><br>
+      <a class="game" href="tank-trouble-2.html">Tank Trouble 2</a><br>
+      <a class="game" href="temple-run-2.html">Temple Run 2</a><br>
+      <a class="game" href="there-is-no-game.html">There Is No Game</a><br>
+      <a class="game" href="townscaper.html">Townscaper</a><br>
+      <a class="game" href="tunnel-rush.html">Tunnel Rush</a><br>
+      <a class="game" href="vex3.html">Vex 3</a><br>
+      <a class="game" href="vex4.html">Vex 4</a><br>
+      <a class="game" href="vex5.html">Vex 5</a><br>
+      <a class="game" href="webgl-rollingsky.html">Rolling SKy</a><br>
+      <a class="game" href="wolfenstein-3D.html">Wolfenstein 3D</a><br>
       
       
   </body>
