--- a/games/index.html
+++ b/games/index.html
@@ -3,8 +3,8 @@
     <title>Games</title>
   </head>
   <body>
-    <h1>We got the games</h1>
     <center>
+    <h1>We got the games</h1>
       <a class="game" href="2048.html">2048</a><br>
       <a class="game" href="8ball.html">8Ball</a><br>
       <a class="game" href="agario-minigame.html">Agario</a><br>
@@ -50,6 +50,6 @@
       <a class="game" href="webgl-rollingsky.html">Rolling SKy</a><br>
       <a class="game" href="wolfenstein-3D.html">Wolfenstein 3D</a><br>
       
-      
+        </center>
   </body>
 </html>
