--- a/games/index.html
+++ b/games/index.html
@@ -1,10 +1,21 @@
 <html>
   <head>
     <title>Games</title>
+    <style>
+      body {
+        background-color:gray;
+      }
+      a, h1 {
+        color:#d3d3d3;
+      }
+      a:hover {
+        colorwhite:
   </head>
   <body>
     <center>
-    <h1>We got the games</h1>
+    <h1>Jet Yeh's Unblocked Games</h1>
+      <a class="game" href="flash-games.html">More Games <<<-------------------------</a><br>
+      <a class="game" href="gba.html">Emulator Games <<<---------------------------</a><br>
       <a class="game" href="2048.html">2048</a><br>
       <a class="game" href="8ball.html">8Ball</a><br>
       <a class="game" href="agario-minigame.html">Agario</a><br>
@@ -20,9 +31,7 @@
       <a class="game" href="draw-the-hill.html">Draw the Hill</a><br>
       <a class="game" href="fireboy-watergirl-in-the-forest-temple.html">Fireboy Watergirl in The Forest</a><br>
       <a class="game" href="flappy-bird.html">Flappy Bird</a><br>
-      <a class="game" href="flash-games.html">More Games <<<-------------------------</a><br>
       <a class="game" href="full-screen-mario.html">Full Screen Mario</a><br>
-      <a class="game" href="gba.html">Emulator Games <<<---------------------------</a><br>
       <a class="game" href="google-snake.html">Google Snake</a><br>
       <a class="game" href="happy-wheels.html">Happy Wheels</a><br>
       <a class="game" href="hexgl.html">Hexgl</a><br>
