--- a/games/index.html
+++ b/games/index.html
@@ -16,50 +16,50 @@
   <body>
     <center>
     <h1>Jet Yeh's Unblocked Games</h1>
-      <a class="game" href="flash-games.html">More Games <<<-------------------------</a><br>
-      <a class="game" href="gba.html">Emulator Games <<<---------------------------</a><br>
-      <a class="game" href="2048.html">2048</a><br>
-      <a class="game" href="8ball.html">8Ball</a><br>
-      <a class="game" href="agario-minigame.html">Agario</a><br>
-      <a class="game" href="basketball-stars.html">Basketball Stars</a><br>
-      <a class="game" href="chrome-dino.html">Chrome Dino</a><br>
-      <a class="game" href="cookie-clicker.html">Cookie Clicker</a><br>
-      <a class="game" href="craftmine.html">Craftmine</a><br>
-      <a class="game" href="ctr-holiday.html">Cut the Rope Holiday</a><br>
-      <a class="game" href="ctr-tr.html">Cut the Rope Time Travel</a><br>
-      <a class="game" href="ctr.html">Cut the Rope</a><br>
-      <a class="game" href="death-run-3d.html">Death Run 3D</a><br>
-      <a class="game" href="doodle-jump.html">Doodle Jump</a><br>
-      <a class="game" href="draw-the-hill.html">Draw the Hill</a><br>
-      <a class="game" href="fireboy-watergirl-in-the-forest-temple.html">Fireboy Watergirl in The Forest</a><br>
-      <a class="game" href="flappy-bird.html">Flappy Bird</a><br>
-      <a class="game" href="full-screen-mario.html">Full Screen Mario</a><br>
-      <a class="game" href="google-snake.html">Google Snake</a><br>
-      <a class="game" href="happy-wheels.html">Happy Wheels</a><br>
-      <a class="game" href="hexgl.html">Hexgl</a><br>
-      <a class="game" href="idle-breakout.html">Idle Breakout</a><br>
-      <a class="game" href="madalin-cars-multiplayer.html">Madalin Stunt Cars</a><br>
-      <a class="game" href="minecraft-classic.html">Minecraft Classic</a><br>
-      <a class="game" href="minekhan.html">MineKhan</a><br>
-      <a class="game" href="muffin-knight.html">Muffin Knight</a><br>
-      <a class="game" href="particle-clicker.html">Particle Clicker</a><br>
-      <a class="game" href="push-your-luck.html">Push Your Luck</a><br>
-      <a class="game" href="retro-bowl.html">Retro Bowl</a><br>
-      <a class="game" href="rooftop-snipers.html">Rooftop Snipers</a><br>
-      <a class="game" href="run-3.html">Run 3</a><br>
-      <a class="game" href="sand-game.html">Sand Game</a><br>
-      <a class="game" href="slope.html">Slope</a><br>
-      <a class="game" href="stack-bump-3d.html">Stack Bump 3D</a><br>
-      <a class="game" href="tank-trouble-2.html">Tank Trouble 2</a><br>
-      <a class="game" href="temple-run-2.html">Temple Run 2</a><br>
-      <a class="game" href="there-is-no-game.html">There Is No Game</a><br>
-      <a class="game" href="townscaper.html">Townscaper</a><br>
-      <a class="game" href="tunnel-rush.html">Tunnel Rush</a><br>
-      <a class="game" href="vex3.html">Vex 3</a><br>
-      <a class="game" href="vex4.html">Vex 4</a><br>
-      <a class="game" href="vex5.html">Vex 5</a><br>
-      <a class="game" href="webgl-rollingsky.html">Rolling SKy</a><br>
-      <a class="game" href="wolfenstein-3D.html">Wolfenstein 3D</a><br>
+      <a class="game" href="/flash-games.html">More Games <<<-------------------------</a><br>
+      <a class="game" href="/gba.html">Emulator Games <<<---------------------------</a><br>
+      <a class="game" href="/2048.html">2048</a><br>
+      <a class="game" href="/8ball.html">8Ball</a><br>
+      <a class="game" href="/agario-minigame.html">Agario</a><br>
+      <a class="game" href="/basketball-stars.html">Basketball Stars</a><br>
+      <a class="game" href="/chrome-dino.html">Chrome Dino</a><br>
+      <a class="game" href="/cookie-clicker.html">Cookie Clicker</a><br>
+      <a class="game" href="/craftmine.html">Craftmine</a><br>
+      <a class="game" href="/ctr-holiday.html">Cut the Rope Holiday</a><br>
+      <a class="game" href="/ctr-tr.html">Cut the Rope Time Travel</a><br>
+      <a class="game" href="/ctr.html">Cut the Rope</a><br>
+      <a class="game" href="/death-run-3d.html">Death Run 3D</a><br>
+      <a class="game" href="/doodle-jump.html">Doodle Jump</a><br>
+      <a class="game" href="/draw-the-hill.html">Draw the Hill</a><br>
+      <a class="game" href="/fireboy-watergirl-in-the-forest-temple.html">Fireboy Watergirl in The Forest</a><br>
+      <a class="game" href="/flappy-bird.html">Flappy Bird</a><br>
+      <a class="game" href="/full-screen-mario.html">Full Screen Mario</a><br>
+      <a class="game" href="/google-snake.html">Google Snake</a><br>
+      <a class="game" href="/happy-wheels.html">Happy Wheels</a><br>
+      <a class="game" href="/hexgl.html">Hexgl</a><br>
+      <a class="game" href="/idle-breakout.html">Idle Breakout</a><br>
+      <a class="game" href="/madalin-cars-multiplayer.html">Madalin Stunt Cars</a><br>
+      <a class="game" href="/minecraft-classic.html">Minecraft Classic</a><br>
+      <a class="game" href="/minekhan.html">MineKhan</a><br>
+      <a class="game" href="/muffin-knight.html">Muffin Knight</a><br>
+      <a class="game" href="/particle-clicker.html">Particle Clicker</a><br>
+      <a class="game" href="/push-your-luck.html">Push Your Luck</a><br>
+      <a class="game" href="/retro-bowl.html">Retro Bowl</a><br>
+      <a class="game" href="/rooftop-snipers.html">Rooftop Snipers</a><br>
+      <a class="game" href="/run-3.html">Run 3</a><br>
+      <a class="game" href="/sand-game.html">Sand Game</a><br>
+      <a class="game" href="/slope.html">Slope</a><br>
+      <a class="game" href="/stack-bump-3d.html">Stack Bump 3D</a><br>
+      <a class="game" href="/tank-trouble-2.html">Tank Trouble 2</a><br>
+      <a class="game" href="/temple-run-2.html">Temple Run 2</a><br>
+      <a class="game" href="/there-is-no-game.html">There Is No Game</a><br>
+      <a class="game" href="/townscaper.html">Townscaper</a><br>
+      <a class="game" href="/tunnel-rush.html">Tunnel Rush</a><br>
+      <a class="game" href="/vex3.html">Vex 3</a><br>
+      <a class="game" href="/vex4.html">Vex 4</a><br>
+      <a class="game" href="/vex5.html">Vex 5</a><br>
+      <a class="game" href="/webgl-rollingsky.html">Rolling SKy</a><br>
+      <a class="game" href="/wolfenstein-3D.html">Wolfenstein 3D</a><br>
       
         </center>
   </body>
