--- a/games/index.html
+++ b/games/index.html
@@ -1,19 +1,10 @@
 <html>
   <head>
     <title>Games</title>
-    <style>
-      body {
-        background-color:gray;
-      }
-      a, h1 {
-        color:#d3d3d3;
-      }
-      a:hover {
-        colorwhite:
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="blogDexStyle.css">
   </head>
-  <body>
+  <body class="color">
     <center>
     <h1>Jet Yeh's Unblocked Games</h1>
       <a class="game" href="/flash-games">More Games <<<-------------------------</a><br>
