--- a/games/index.html
+++ b/games/index.html
@@ -7,21 +7,21 @@
   <body class="color">
     <center>
     <h1>Jet Yeh's Unblocked Games</h1>
-      <a class="game" href="/flash-games">More Games <<<-------------------------</a><br>
-      <a class="game" href="/gba">Emulator Games <<<---------------------------</a><br>
-      <a class="game" href="/2048">2048</a><br>
-      <a class="game" href="/8ball">8Ball</a><br>
-      <a class="game" href="/agario-minigame">Agario</a><br>
-      <a class="game" href="/basketball-stars">Basketball Stars</a><br>
-      <a class="game" href="/chrome-dino">Chrome Dino</a><br>
-      <a class="game" href="/cookie-clicker">Cookie Clicker</a><br>
-      <a class="game" href="/craftmine">Craftmine</a><br>
-      <a class="game" href="/ctr-holiday">Cut the Rope Holiday</a><br>
-      <a class="game" href="/ctr-tr">Cut the Rope Time Travel</a><br>
-      <a class="game" href="/ctr">Cut the Rope</a><br>
-      <a class="game" href="/death-run-3d">Death Run 3D</a><br>
-      <a class="game" href="/doodle-jump">Doodle Jump</a><br>
-      <a class="game" href="/draw-the-hill">Draw the Hill</a><br>
+      <a class="game" href="/flash-games/">More Games <<<-------------------------</a><br>
+      <a class="game" href="/gba/">Emulator Games <<<---------------------------</a><br>
+      <a class="game" href="/2048/">2048</a><br>
+      <a class="game" href="/8ball/">8Ball</a><br>
+      <a class="game" href="/agario-minigame/">Agario</a><br>
+      <a class="game" href="/basketball-stars/">Basketball Stars</a><br>
+      <a class="game" href="/chrome-dino/">Chrome Dino</a><br>
+      <a class="game" href="/cookie-clicker/">Cookie Clicker</a><br>
+      <a class="game" href="/craftmine/">Craftmine</a><br>
+      <a class="game" href="/ctr-holiday/">Cut the Rope Holiday</a><br>
+      <a class="game" href="/ctr-tr/">Cut the Rope Time Travel</a><br>
+      <a class="game" href="/ctr/">Cut the Rope</a><br>
+      <a class="game" href="/death-run-3d/">Death Run 3D</a><br>
+      <a class="game" href="/doodle-jump/">Doodle Jump</a><br>
+      <a class="game" href="/draw-the-hill/">Draw the Hill</a><br>
       <a class="game" href="/fireboy-watergirl-in-the-forest-temple">Fireboy Watergirl in The Forest</a><br>
       <a class="game" href="/flappy-bird">Flappy Bird</a><br>
       <a class="game" href="/full-screen-mario">Full Screen Mario</a><br>
