--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Side Navigation Bar</title>
+	<title>Jet Yeh's</title>
 	<link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type="text/css" href="blogDexStyle.css">
 	<script src="https://kit.fontawesome.com/f4c5c3ffd2.js"></script>
@@ -27,7 +27,7 @@
   <div class="main_content">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-        "welcome to Jet Yehs" - Brett Chase
+        "Welcome to Jet Yeh's" - Brett Chase
     </div>
     <div class="info">
       <header>
