--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                </a>
             </div>
             <div name = "Retro Bowl" class="column gameDiv all sport">
-               <a class="blogLink" href="/games/retro-bowl.html">
+               <a class="blogLink" href="/games/retro-bowl/">
                   <div class="content">
                      <img src="https://i.ibb.co/NNRKFGL/retro-Bowl.png" alt="Retro Bowl" style="width:100%">
                      <h4>Retro Bowl</h4>
