--- a/no-password.html
+++ b/no-password.html
@@ -109,6 +109,14 @@
                   </div>
                </a>
             </div>
+            <div name = "Google Snake" class="column gameDiv all">
+               <a class="blogLink" href="games/google-snake/">
+                  <div class="content">
+                     <img src="https://i.ibb.co/SP3nZTL/snake.png" alt="snake" style="width:100%">
+                     <h4>Google Snake</h4>
+                  </div>
+               </a>
+            </div>
             <div name = "Chrome Dinosaur" class="column gameDiv all">
                <a class="blogLink" href="games/chrome-dino/">
                   <div class="content">
@@ -189,14 +197,6 @@
                   </div>
                </a>
             </div>
-            <div name = "Prop Hunt" class="column gameDiv all 2">
-               <a class="blogLink" href="/games/prop-hunt.html">
-                  <div class="content">
-                     <img src="https://i.ibb.co/4MfYrkh/propHunt.png" alt="Prop Hunt" style="width:100%">
-                     <h4>Prop Hunt</h4>
-                  </div>
-               </a>
-            </div>
             <div name = "Cat Mario" class="column gameDiv nin all">
                <a class="blogLink" href="catMario.html">
                   <div class="content">
@@ -205,16 +205,8 @@
                   </div>
                </a>
             </div>
-            <div name = "Sudoku" class="column gameDiv all">
-               <a class="blogLink" href="/sudoku.html">
-                  <div class="content">
-                     <img src="https://i.ibb.co/3TpSQ9S/sudoku.png" alt="Sudoku" style="width:100%">
-                     <h4>Sudoku</h4>
-                  </div>
-               </a>
-            </div>
             <div name = "Bloxorz" class="column gameDiv all">
-               <a class="blogLink" href="/bloxorz.html">
+               <a class="blogLink" href="games/flash-games/bloxorz.html">
                   <div class="content">
                      <img src="https://i.ibb.co/dQ42rx0/Bloxorz.png" alt="Bloxorz" style="width:100%">
                      <h4>Bloxorz</h4>
@@ -222,7 +214,7 @@
                </a>
             </div>
             <div name = "2048" class="column gameDiv all">
-               <a class="blogLink" href="/games/2048.html">
+               <a class="blogLink" href="games/2048/">
                   <div class="content">
                      <img src="https://i.ibb.co/ZfBR56n/2048.png" alt="2048" style="width:100%">
                      <h4>2048</h4>
@@ -230,47 +222,39 @@
                </a>
             </div>
             <div name = "Run 3" class="column gameDiv all">
-               <a class="blogLink" href="/games/run-3.html">
+               <a class="blogLink" href="#">
                   <div class="content">
                      <img src="https://i.ibb.co/937P0y7/run3.png" alt="Run 3" style="width:100%">
                      <h4>Run 3</h4>
                   </div>
                </a>
             </div>
-            <div name = "Snake" class="column gameDiv all">
-               <a class="blogLink" href="/snake.html">
-                  <div class="content">
-                     <img src="https://i.ibb.co/S5WdVby/snake.png" alt="snake" style="width:100%">
-                     <h4>Snake</h4>
-                  </div>
-               </a>
-            </div>
             <div name = "Minecraft Classic" class="column gameDiv all">
-               <a class="blogLink" href="/games/classic-minecraft.html">
+               <a class="blogLink" href="games/minecraft-classic/">
                   <div class="content">
                      <img src="https://i.ibb.co/L542Wfp/minecraft-Classic.png" alt="Minecraft Classic" style="width:100%">
                      <h4>Minecraft Classic</h4>
                   </div>
                </a>
             </div>
-            <div name = "Paper Minecraft" class="column gameDiv all">
-               <a class="blogLink" href="/paperMinecraft.html">
+            <div name = "Craftmine" class="column gameDiv all">
+               <a class="blogLink" href="games/craftmine/">
                   <div class="content">
-                     <img src="https://i.ibb.co/PGdXZ4n/paper-Minecraft.png" alt="Paper Minecraft" style="width:100%">
-                     <h4>Paper Minecraft</h4>
+                     <img src="https://i.ibb.co/PGdXZ4n/paper-Minecraft.png" alt="craftmine" style="width:100%">
+                     <h4>Craftmine</h4>
                   </div>
                </a>
             </div>
-            <div name = "Potty Racers" class="column gameDiv all">
-               <a class="blogLink" href="/pottyRacers.html">
+            <div name = "Minekhan" class="column gameDiv all">
+               <a class="blogLink" href="games/minekhan/">
                   <div class="content">
-                     <img src="https://i.ibb.co/pwHS4WJ/potty-Racers.png" alt="Potty Racers" style="width:100%">
-                     <h4>Potty Racers</h4>
+                     <img src="https://i.ibb.co/pwHS4WJ/potty-Racers.png" alt="Minekhan" style="width:100%">
+                     <h4>Minekhan</h4>
                   </div>
                </a>
             </div>
             <div name = "Basketball Legends" class="column gameDiv all 2 sport">
-               <a class="blogLink" href="/games/basketball-legends.html">
+               <a class="blogLink" href="games/basketball-stars/">
                   <div class="content">
                      <img src="https://i.ibb.co/n12280g/basketball-Legends.png" alt="Basketball Legends" style="width:100%">
                      <h4>Basketball Legends</h4>
@@ -278,7 +262,7 @@
                </a>
             </div>
             <div name = "Rooftop Snipers" class="column gameDiv all 2">
-               <a class="blogLink" href="/games/rooftop-snipers.html">
+               <a class="blogLink" href="games/rooftop-snipers/">
                   <div class="content">
                      <img src="https://i.ibb.co/GMN0Xqv/rooftop-Snipers.png" alt="Rooftop Snipers" style="width:100%">
                      <h4>Rooftop Snipers</h4>
@@ -286,23 +270,23 @@
                </a>
             </div>
             <div name = "Gun Mayhem 2" class="column gameDiv all 2">
-               <a class="blogLink" href="gunMayhem2.html">
+               <a class="blogLink" href="#">
                   <div class="content">
                      <img src="https://i.ibb.co/99mXDmX/Gun-Mayham.png" alt="Gun Mayhem 2" style="width:100%">
                      <h4>Gun Mayhem 2</h4>
                   </div>
                </a>
             </div>
-            <div name = "Tank Trouble" class="column gameDiv all 2 car">
-               <a class="blogLink" href="tankTrouble.html">
+            <div name = "Tank Trouble 2" class="column gameDiv all 2 car">
+               <a class="blogLink" href="games/tank-trouble-2/">
                   <div class="content">
-                     <img src="https://i.ibb.co/7VyqTzg/tank-Trouble.png" alt="Tank Trouble" style="width:100%">
-                     <h4>Tank Trouble</h4>
+                     <img src="https://i.ibb.co/7VyqTzg/tank-Trouble.png" alt="Tank Trouble 2" style="width:100%">
+                     <h4>Tank Trouble 2</h4>
                   </div>
                </a>
             </div>
             <div name = "GunBlood" class="column gameDiv all">
-               <a class="blogLink" href="gunBlood.html">
+               <a class="blogLink" href="games/flash-games/gunblood.html">
                   <div class="content">
                      <img src="https://i.ibb.co/WHVfFhb/gunBlood.png" alt="Gun Blood" style="width:100%">
                      <h4>GunBlood</h4>
@@ -318,7 +302,7 @@
                </a>
             </div>
             <div name = "Choppy Orc" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/choppy-orc.html">
+               <a class="blogLink" href="games/choppy-orc.html">
                   <div class="content">
                      <img src="https://i.ibb.co/FxcJ5Hs/Choppy-Orc.png" alt="Choppy Orc" style="width:100%">
                      <h4>Choppy Orc</h4>
@@ -326,7 +310,7 @@
                </a>
             </div>
             <div name = "Greedy Mimic" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/greedy-mimic.html">
+               <a class="blogLink" href="games/greedy-mimic.html">
                   <div class="content">
                      <img src="https://i.ibb.co/2ymw0mN/greedy-Mimic.png" alt="Greedy Mimic" style="width:100%">
                      <h4>Greedy Mimic</h4>
@@ -334,7 +318,7 @@
                </a>
             </div>
             <div name = "Hasty Shaman" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/hasty-shaman.html">
+               <a class="blogLink" href="games/hasty-shaman.html">
                   <div class="content">
                      <img src="https://i.ibb.co/PT12RL7/hasty-Shaman.png" alt="Hasty Shaman" style="width:100%">
                      <h4>Hasty Shaman</h4>
@@ -342,7 +326,7 @@
                </a>
             </div>
             <div name = "Sleepy Knight" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/sleepy-knight.html">
+               <a class="blogLink" href="games/sleepy-knight.html">
                   <div class="content">
                      <img src="https://i.ibb.co/jHYMvRZ/Sleepy-Knight.png" alt="Sleepy Knight" style="width:100%">
                      <h4>Sleepy Knight</h4>
@@ -350,7 +334,7 @@
                </a>
             </div>
             <div name = "One Trick Mage" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/one-trick-mage.html">
+               <a class="blogLink" href="games/one-trick-mage.html">
                   <div class="content">
                      <img src="https://i.ibb.co/GJbztkn/one-Trick-Mage.png" alt="One Trick Mage" style="width:100%">
                      <h4>One Trick Mage</h4>
@@ -358,7 +342,7 @@
                </a>
             </div>
             <div name = "Orcs Vs Elves" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/orcs-vs-elves.html">
+               <a class="blogLink" href="games/orcs-vs-elves.html">
                   <div class="content">
                      <img src="https://i.ibb.co/zFx7R19/orc-Vs-Elves.png" alt="Orcs Vs Elves" style="width:100%">
                      <h4>Orcs Vs Elves</h4>
@@ -366,7 +350,7 @@
                </a>
             </div>
             <div name = "Sticky Sorcerer" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/sticky-sorcerer.html">
+               <a class="blogLink" href="games/sticky-sorcerer.html">
                   <div class="content">
                      <img src="https://i.ibb.co/5hM8QNt/sticky-Sorcerer.png" alt="One Trick Mage" style="width:100%">
                      <h4>Sticky Sorcerer</h4>
@@ -374,7 +358,7 @@
                </a>
             </div>
             <div name = "Dozen Bear" class="column gameDiv all edd">
-               <a class="blogLink" href="/games/dozen-bear.html">
+               <a class="blogLink" href="games/dozen-bear.html">
                   <div class="content">
                      <img src="https://i.ibb.co/pnZGyL7/Dozen-Bear.png" alt="Dozen Bear" style="width:100%">
                      <h4>Dozen Bear</h4>
@@ -456,7 +440,7 @@
                </a>
             </div>
             <div name = "Super Monkey Ball Jr" class="column gameDiv all nin">
-               <a class="blogLink" href="/games/super-monkey-ball.html">
+               <a class="blogLink" href="games/gba/launcher.html#supermonkeyballjr">
                   <div class="content">
                      <img src="https://i.ibb.co/kQQ05rc/super-Monkey-Ball.png" alt="Super Monkey Ball Jr" style="width:100%">
                      <h4>Super Monkey Ball Jr</h4>
@@ -464,7 +448,7 @@
                </a>
             </div>
             <div name = "Sonic Advance" class="column gameDiv all nin">
-               <a class="blogLink" href="/games/sonic-advance.html">
+               <a class="blogLink" href="games/gba/launcher.html#sonic_advance">
                   <div class="content">
                      <img src="https://i.ibb.co/J77RM58/sonic-Advance.png" alt="Sonic Advance" style="width:100%">
                      <h4>Sonic Advance</h4>
