--- a/no-password.html
+++ b/no-password.html
@@ -78,6 +78,14 @@
          <!-- Portfolio Gallery Grid -->
          <div class="row">
             <div name = "Temple Run 2" class="column gameDiv all">
+               <a class="blogLink" href="https://eaglercraft-replit.christianburek.repl.co/">
+                  <div class="content">
+                     <img src="https://i.ibb.co/V9s9Pw0/temple-run-2.png" alt="Temple Run 2" style="width:100%">
+                     <h4>Test</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Temple Run 2" class="column gameDiv all">
                <a class="blogLink" href="games/temple-run-2/">
                   <div class="content">
                      <img src="https://i.ibb.co/V9s9Pw0/temple-run-2.png" alt="Temple Run 2" style="width:100%">
@@ -114,6 +122,14 @@
                   <div class="content">
                      <img src="https://i.ibb.co/SP3nZTL/snake.png" alt="snake" style="width:100%">
                      <h4>Google Snake</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "1v1LOL" class="column gameDiv all">
+               <a class="blogLink" href="games/1v1lol/">
+                  <div class="content">
+                     <img src="https://i.ibb.co/k2rgYx0/1v1LOL.png" alt="1v1LOL" style="width:100%">
+                     <h4>1v1LOL</h4>
                   </div>
                </a>
             </div>
