--- a/no-password.html
+++ b/no-password.html
@@ -77,6 +77,30 @@
       <div class="main">
          <!-- Portfolio Gallery Grid -->
          <div class="row">
+	     <div name = "Cut The Rope" class="column gameDiv all">
+               <a class="blogLink" href="games/ctr/">
+                  <div class="content">
+                     <img src="https://i.ibb.co/Bjg1h29/cut-the-rope-holiday.png" alt="Cut The Rope" style="width:100%">
+                     <h4>Cut The Rope</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Cut The Rope Holiday Gift" class="column gameDiv all">
+               <a class="blogLink" href="games/ctr-holiday/">
+                  <div class="content">
+                     <img src="https://i.ibb.co/Bjg1h29/cut-the-rope-holiday.png" alt="Cut The Rope Holiday Gift" style="width:100%">
+                     <h4>Cut The Rope Holiday Gift</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Cut The Rope Time Travel" class=" ">
+               <a class="blogLink" href="games/ctr-tr/">
+                  <div class="content">
+                     <img src="https://i.ibb.co/5kCZYdP/cut-the-rope-tr.png" alt="Cut The Rope Time Travel" style="width:100%">
+                     <h4>Cut The Rope Time Travel</h4>
+                  </div>
+               </a>
+            </div>
             <div name = "Minecraft" class="column gameDiv all">
                <a class="blogLink" href="https://eaglercraft-replit.christianburek.repl.co/">
                   <div class="content">
